MDEV-5085: Dynamic columns require inclusion of my_sys.h and my_global.h