unittest/mysys/ma_dyncol-t.c
@@ -28,7 +28,6 @@
 
 #include <my_global.h>
 #include <my_sys.h>
-#include <m_string.h>
 #include <ma_dyncol.h>
 #include <tap.h>
 
